[workspace]
members = ["next-renderer", "next-gpu"]

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
# local
next-renderer = { path = "./next-renderer" }
next-gpu = { path = "./next-gpu" }

# dev
clippy = "0.0.302"

# window
winit = "0.29.4"

# vulkan
ash = "0.37.3"

# dx12
windows = "0.52.0"

# others
array-init = "2.0.0"
