[package]
name = "next-renderer-rhi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vulkan"]
vulkan = ["ash"]

[dependencies]
# vulkan
ash = { optional = true, workspace = true }

[dev-dependencies]
clippy.workspace = true
