[package]
name = "next-renderer"
version = "0.1.0"
edition = "2021"
description = "Next Renderer"
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash.workspace = true
winit.workspace = true
next-gpu.workspace = true

[dev-dependencies]
clippy.workspace = true

# We want the Vulkan backend on Unix (but not emscripten, macOS, iOS) and Windows.
[target.'cfg(any(windows, all(unix, not(target_os = "emscripten"), not(target_os = "ios"), not(target_os = "macos"))))'.dependencies.next-gpu]
workspace = true
features = ["vulkan"]
