[package]
name = "next_gpu_backend"
version = "0.1.0"
readme.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["gpu", "graphics", "backend", "vulkan", "dx12"]
categories = ["graphics", "gpu", "backend"]
description = "GPU driver backend with abstractions for Vulkan and DX12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
bitflags = { workspace = true }
# vulkan
ash = { wokrspace = true, features = ["linked"] }

# dx12
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
clippy = { workspace = true }
